# Dise-o-Caso1

./: README.md
Caso 1 - Parte  2/: README.md
Caso 1 - Parte  2/src/backend/: Dockerfile.api  Dockerfile.worker  README.md  pyproject.toml
Caso 1 - Parte  2/src/backend/api/: deps.py  main.py
Caso 1 - Parte  2/src/backend/api/middleware/: request_context.py  security.py
Caso 1 - Parte  2/src/backend/api/routers/: dua.py  health.py  jobs.py
Caso 1 - Parte  2/src/backend/application/commands/: create_job.py  submit_job.py
Caso 1 - Parte  2/src/backend/application/queries/: __init__.py  get_job_status.py
Caso 1 - Parte  2/src/backend/application/services/: create_job_service.py  download_service.py  submit_job_service.py
Caso 1 - Parte  2/src/backend/contracts/: openapi.yaml
Caso 1 - Parte  2/src/backend/domain/common/: ids.py  ports.py
Caso 1 - Parte  2/src/backend/domain/dua/: __init__.py  dua_draft.py  repositories.py  value_objects.py
Caso 1 - Parte  2/src/backend/domain/jobs/: __init__.py  job.py  repositories.py
Caso 1 - Parte  2/src/backend/dua_streamliner_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Caso 1 - Parte  2/src/backend/infrastructure/cache/: __init__.py  redis_progress.py
Caso 1 - Parte  2/src/backend/infrastructure/messaging/: __init__.py  sqs_publisher.py
Caso 1 - Parte  2/src/backend/infrastructure/persistence/: sql_dua_repository.py  sql_job_repository.py
Caso 1 - Parte  2/src/backend/infrastructure/storage/: s3_adapter.py
Caso 1 - Parte  2/src/backend/worker/: __init__.py  main.py
(+140 files in other folders)
