[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dua-streamliner-backend"
version = "0.1.0"
description = "DUA Streamliner API and worker (skeleton)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "boto3>=1.34",
  "redis>=5.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.13",
  "black>=24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "application*", "domain*", "infrastructure*", "worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
